Clean up slightly
Replace deprecated methods, simplify constructor.